[package]
name = "hiring_challenge_rust"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
axum = "0.8.3"
axum-macros = "0.5.0"
axum-tracing-opentelemetry = "0.28.0"
dotenvy = "0.15.6"
futures = "0.3.26"
http-body = "1.0.1"
hyper = { version = "1.6.0", features = ["client"] }
lazy_static = "1.4.0"
opentelemetry = "0.29.1"
opentelemetry-otlp = "0.29.0"
rand = "0.9.0"
regex = "1"
serde = "1.0.152"
serde_json = "1.0.93"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "time", "uuid"] }
strum = "0.27.1"
strum_macros = "0.27.1"
time = { version = "0.3.18", features = ["serde"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tracing = "0.1.37"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }

[dev-dependencies]
rstest = "0.25.0"

[profile.dev.package.sqlx-macros]
opt-level = 3
